infra/docker/bridge/base/user-service-deployment.yaml
#! user-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: user-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker
            com.docker.compose.service: user-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker
                com.docker.compose.service: user-service
                com.docker.compose.network.distrischool-network: "true"
        spec:
            containers:
                - name: user-service
                  image: docker-user-service
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: user-servi-8080
                      containerPort: 8080
