infra/docker/bridge/base/zookeeper-deployment.yaml
#! zookeeper-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zookeeper
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: zookeeper
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker
            com.docker.compose.service: zookeeper
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker
                com.docker.compose.service: zookeeper
                com.docker.compose.network.distrischool-network: "true"
        spec:
            containers:
                - name: zookeeper
                  image: confluentinc/cp-zookeeper:7.5.0
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: zookeeper-2181
                      containerPort: 2181
                    - name: zookeeper-2888
                      containerPort: 2888
                    - name: zookeeper-3888
                      containerPort: 3888
