infra/docker/bridge/base/admin-staff-service-expose.yaml
#! admin-staff-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: admin-staff-service
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: admin-staff-service
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: admin-staff-service
    ports:
        - name: admin-staf-8080
          port: 8080
          targetPort: admin-staf-8080
