infra/docker/bridge/base/kafka-expose.yaml
#! kafka-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: kafka
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: kafka
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: kafka
    ports:
        - name: kafka-9092
          port: 9092
          targetPort: kafka-9092
