infra/docker/bridge/base/user-service-service.yaml
#! user-service-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: user-service-published
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: user-service
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: user-service
    ports:
        - name: user-servi-8081
          port: 8081
          protocol: TCP
          targetPort: user-servi-8080

# check if there is at least one published port
